add 320px portfolio styles

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
         </ul>
     </section>
 
-    <section class="portfilio">
+    <section class="portfolio">
             <h2 class="section__title">ПОРТФОЛИО</h2>
  <div class="container">
     <ul class="paginations">
@@ -116,7 +116,7 @@
             <picture>
                     <source srcset="/img/1440_portfolio-4.jgp" media="(min-width: 1440px)">
                         <source srcset="/img/764_portfollio-4.jpg" media="(min-width: 764px)">
-                        <img src="/img/320_portfolio-4.jpg" alt="напитки" class="photo__pic">
+                        <img src="/img/320_porfolio-4.jpg" alt="напитки" class="photo__pic">
             </picture>
                 <ul class="photo__tags">
                     <li class="photo__tag">#рекламнаясъемка</li>
