add 320px download styles

--- a/src/index.html
+++ b/src/index.html
@@ -132,15 +132,19 @@
  </div>
     </section>
 
-    <section class="download">
+    <section class="download-page">
         <picture>
-                <source srcset="/img/1440_" media="(min-width: 1440px)">
-                    <source srcset="/img/764_" media="(min-width: 764px)">
-            <img src="#" alt="" class="section__img">
+                <source srcset="/img/1440_download_bg.jpg" media="(min-width: 1440px)">
+                    <source srcset="/img/764_download_bg.jpg" media="(min-width: 764px)">
+                   <img src="/img/320_download_bg.jpg" alt="eda" class="section__img">
         </picture>
+        <div class="section__wrapper">
+
+   
         <h2 class="section__title">Подробное портфолио</h2>
         <p class="section__desc">С описанием задач заказчика, полного процесса работы и финальным результатом </p>
-        <a href="#" class="btn">Скачать в pdf -</a>
+        <a href="#" class="btn btn--pdf">Скачать в pdf —</a>
+    </div>
         <ul class="socials">
                 <li class="social"><a href="#" class="social__link">INSTAGRAM</a></li>
                 <li class="social"><a href="#" class="social__link">FACEBOOK</a></li>
