--- a/src/index.html
+++ b/src/index.html
@@ -165,24 +165,32 @@
                             <div class="gallery__photos">
                                 <div class="gallery__photo">
                                     <picture>
-                                            <img src="#" alt="photo edi">
+                                            <source srcset="/img/1440_about_bg-l.jpg" media="(min-width: 1440px)">
+                                        <source srcset="/img/764_about_bg-l.jpg" media="(min-width: 764px)">
+                                            <img src="/img/320_about_bg-l.jpg" alt="photo edi" class="gallery__photo--left">
                                     </picture>
-                                    <p class="gallery__desc gallery__desc--tablet"></p> 
+                                    <p class="gallery__desc gallery__desc--tablet">Во всех фотосъемках еды, я работаю как фуд-фотограф и фуд-стилист. Создаю креативные концепции, реализую ваши идеи. Разрабатываю рецепты, вкусно снимаю. Провожу обучение</p> 
                                 </div>
-                                <div class="gallery__photos">
-                                        <div class="gallery__photo">
-                                            <picture>
-                                                    <img src="#" alt="photo edi">
-                                            </picture>
-                                            <p class="gallery__desc gallery__desc--tablet"></p> 
-                                        </div>
-                                        <div class="gallery__info">
-                                                <p class="gallery__desc">Во всех фотосъемках еды, я работаю как фуд-фотограф и фуд-стилист. Создаю креативные концепции, реализую ваши идеи. Разрабатываю рецепты, вкусно снимаю. Провожу обучение</p>
-                                                <p class="gallery__desc">Mail: daria.voronina@gmail.com</p>
-                                                <p class="gallery__desc">Tel.: <span class="gallery__phone">+ 7 916 66 77 112</span></p>
-                                                <a href="#" class="btn">Работать со мной -</a>
-                                        </div>
+                                <div class="gallery__photo">
+                                        <picture>
+                                                <source srcset="/img/1440_about_bg-r.jpg" media="(min-width: 1440px)">
+                                            <source srcset="/img/764_about_bg-r.jpg" media="(min-width: 764px)">
+                                                <img src="/img/320_about_bg-r.jpg" alt="photo edi" class="gallery__photo--right">
+                                        </picture>
+                                        <p class="gallery__desc gallery__desc--tablet">
+                                                <span class="gallery__desc">Mail: daria.voronina@gmail.com</span>
+                                                <span class="gallery__desc">Tel.: <span class="gallery__phone">+ 7 916 66 77 112</span></span>
+                                                <a href="#" class="btn">Работать со мной —</a>
+                                        </p> 
+                                </div>
+                             
 
+                            </div>
+                            <div class="gallery__info">
+                                    <p class="gallery__desc">Во всех фотосъемках еды, я работаю как фуд-фотограф и фуд-стилист. Создаю креативные концепции, реализую ваши идеи. Разрабатываю рецепты, вкусно снимаю. Провожу обучение</p>
+                                    <p class="gallery__desc">Mail: daria.voronina@gmail.com</p>
+                                    <p class="gallery__desc">Tel.: <span class="gallery__phone">+ 7 916 66 77 112</span></p>
+                                    <a href="#" class="btn">Работать со мной —</a>
                             </div>
                         </div>
 
