add 320px prices page styles

--- a/src/index.html
+++ b/src/index.html
@@ -222,13 +222,14 @@
                                <span class="price__time">12 часов  съемки</span>
                             <span class="price__value">30 000 рублей</span>
                         </p>
-                            <p class="photo__desc">Подготовка к съемке от 1 недели
-                                    Предварительный дизайн — проект
-                                    Food - стилизация
-                                    Расширенный реквизит
-                                    Цветокоррекция и пост-обработка
-                                    Результаты в течение 3-х дней
-                                    </p>
+                        <ul class="photo__features">
+                            <li class="photo__feature">Подготовка к съемке от 1 недели</li>
+                            <li class="photo__feature">Предварительный дизайн — проект</li>
+                            <li class="photo__feature">Food - стилизация</li>
+                            <li class="photo__feature">Расширенный реквизит</li>
+                            <li class="photo__feature">Цветокоррекция и пост-обработка</li>
+                            <li class="photo__feature">Результаты в течение 3-х дней</li>
+                        </ul>
                         </div>
                 </div>
                 <div class="prices__photo">
@@ -241,11 +242,13 @@
                                <span class="price__time">4 часа съемки</span>
                             <span class="price__value">15 000 рублей</span>
                         </p>
-                            <p class="photo__desc">Подготовка к съемке - 1 день
-                                    Food - стилизация
-                                    Использование реквизита
-                                    Цветокоррекция и постобработка
-                                    Результаты в течение 3-х дней</p>
+                         <ul class="photo__features">
+                                    <li class="photo__feature">Подготовка к съемке - 1 день</li>
+                                    <li class="photo__feature">Food - стилизация</li>
+                                    <li class="photo__feature">Использование реквизита</li>
+                                    <li class="photo__feature">Цветокоррекция и пост-обработка</li>
+                                    <li class="photo__feature">Результаты в течение 3-х дней</li>
+                                </ul>    
                         </div>
                 </div>
                 <div class="prices__photo">
@@ -258,10 +261,12 @@
                                <span class="price__time">1 час  съемки</span>
                             <span class="price__value">4 000 рублей</span>
                         </p>
-                            <p class="photo__desc">Food - стилизация
-                                    Использование реквизита
-                                    Цветокоррекция
-                                    Результаты в течение 5-х дней</p>
+                        <ul class="photo__features">
+                                <li class="photo__feature">Food - стилизация</li>
+                                <li class="photo__feature">Использование реквизита</li>
+                                <li class="photo__feature">Цветокоррекция</li>
+                                <li class="photo__feature">Результаты в течение 5-х дней</li>
+                            </ul>
                         </div>
                 </div>
 
