add 320px socials page styles

--- a/src/index.html
+++ b/src/index.html
@@ -285,19 +285,19 @@
 
     </section>
 
-<section class="contacs">
+<section class="contacts">
     <h2 class="section__title">Свяжитесь со мной</h2>
-    <footer class="contacs__footer">
+    <footer class="contacts__footer">
         <ul class="contacts__links">
-            <li class="contact__link"><span class="link"></span></li>
-            <li class="contact__link"><span class="link"></span></li>
-            <li class="contact__link"><span class="link"></span></li>
+            <li class="contacts__link">Skype<span class="link">///</span>daria.voronina</li>
+            <li class="contacts__link">E-mail<span class="link">///</span>daria.voronina@gmail.com</li>
+            <li class="contacts__link">Phone<span class="link">///</span>+ 7 916 66 77 112</li>
         </ul>
         <ul class="socials">
-            <li class="social"><a href="#" class="social__link"></a></li>
-            <li class="social"><a href="#" class="social__link"></a></li>
-            <li class="social"><a href="#" class="social__link"></a></li>
-            <li class="social"><a href="#" class="social__link"></a></li>
+            <li class="social"><a href="#" class="social__link social__link--fb"></a></li>
+            <li class="social"><a href="#" class="social__link social__link--inst"></a></li>
+            <li class="social"><a href="#" class="social__link social__link--vk"></a></li>
+            <li class="social"><a href="#" class="social__link social__link--pin"></a></li>
         </ul>
     </footer>
 </section>
