add 764px portfolio styles

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
         <div class="portfolio__photo">
             <picture>
                 <source srcset="/img/1440_portfolio-1.jgp" media="(min-width: 1440px)">
-                <source srcset="/img/764_portfollio-1.jpg" media="(min-width: 764px)">
+                <source srcset="/img/764_portfolio-1.jpg" media="(min-width: 764px)">
                 <img src="/img/320_portfolio-1.jpg" alt="напитки" class="photo__pic">
             </picture>
                 <ul class="photo__tags">
@@ -89,11 +89,10 @@
                 </ul>
                 <p class="photo__desc">Фото контент для социальных сетей кондитерской «Леди Мармелад»</p>
             </div>
-    </div>
     <div class="portfolio__photo">
             <picture>
                     <source srcset="/img/1440_portfolio-2.jgp" media="(min-width: 1440px)">
-                        <source srcset="/img/764_portfollio-2.jpg" media="(min-width: 764px)">
+                        <source srcset="/img/764_portfolio-2.jpg" media="(min-width: 764px)">
                         <img src="/img/320_portfolio-2.jpg" alt="напитки" class="photo__pic">
             </picture>
                 <ul class="photo__tags">
@@ -101,23 +100,21 @@
                 </ul>
                 <p class="photo__desc">Фото контент для инстаграма ресторана «Funky Food»</p>
             </div>
-    </div>
     <div class="portfolio__photo">
             <picture>
                     <source srcset="/img/1440_portfolio-3.jgp" media="(min-width: 1440px)">
-                        <source srcset="/img/764_portfollio-3.jpg" media="(min-width: 764px)">
+                        <source srcset="/img/764_portfolio-3.jpg" media="(min-width: 764px)">
                         <img src="/img/320_portfolio-3.jpg" alt="напитки" class="photo__pic">
             </picture>
                 <ul class="photo__tags">
                     <li class="photo__tag">#менюресторана</li>
                 </ul>
                 <p class="photo__desc">Съемка меню ресторана «Хорошая еда»</p>
-            </div>
     </div>
     <div class="portfolio__photo">
             <picture>
                     <source srcset="/img/1440_portfolio-4.jgp" media="(min-width: 1440px)">
-                        <source srcset="/img/764_portfollio-4.jpg" media="(min-width: 764px)">
+                        <source srcset="/img/764_portfolio-4.jpg" media="(min-width: 764px)">
                         <img src="/img/320_porfolio-4.jpg" alt="напитки" class="photo__pic">
             </picture>
                 <ul class="photo__tags">
