add 764 download-page styles

--- a/src/index.html
+++ b/src/index.html
@@ -60,14 +60,14 @@
                             <img src="/img/320_hero.jpg" alt="Daria Voronina" class="pic__main">
                 </picture>
         </div>
-        <ul class="socials">
+        <ul class="socials socials--tablet">
             <li class="social"><a href="#" class="social__link">INSTAGRAM</a></li>
             <li class="social"><a href="#" class="social__link">FACEBOOK</a></li>
         </ul>
     </section>
 
     <section class="portfolio">
-            <h2 class="section__title">ПОРТФОЛИО</h2>
+    <h2 class="section__title">ПОРТФОЛИО</h2>
  <div class="container">
     <ul class="paginations">
         <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
@@ -132,17 +132,18 @@
     </section>
 
     <section class="download-page">
-        <picture>
-                <source srcset="/img/1440_download_bg.jpg" media="(min-width: 1440px)">
-                    <source srcset="/img/764_download_bg.jpg" media="(min-width: 764px)">
-                   <img src="/img/320_download_bg.jpg" alt="eda" class="section__img">
-        </picture>
+      
         <div class="section__wrapper">
-
-   
-        <h2 class="section__title">Подробное портфолио</h2>
-        <p class="section__desc">С описанием задач заказчика, полного процесса работы и финальным результатом </p>
-        <a href="#" class="btn btn--pdf">Скачать в pdf —</a>
+                <picture>
+                        <source srcset="/img/1440_download_bg.jpg" media="(min-width: 1440px)">
+                            <source srcset="/img/764_download_bg.jpg" media="(min-width: 764px)">
+                           <img src="/img/320_download_bg.jpg" alt="eda" class="section__img">
+                </picture>
+                <div class="section__wr">
+                        <h2 class="section__title">Подробное портфолио</h2>
+                        <p class="section__desc">С описанием задач заказчика, полного процесса работы и финальным результатом </p>
+                        <a href="#" class="btn btn--pdf">Скачать в pdf —</a>
+                </div>
     </div>
         <ul class="socials">
                 <li class="social"><a href="#" class="social__link">INSTAGRAM</a></li>
