add 764px about styles

--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
                                         <source srcset="/img/764_about_bg-l.jpg" media="(min-width: 764px)">
                                             <img src="/img/320_about_bg-l.jpg" alt="photo edi" class="gallery__photo--left">
                                     </picture>
-                                    <p class="gallery__desc gallery__desc--tablet">Во всех фотосъемках еды, я работаю как фуд-фотограф и фуд-стилист. Создаю креативные концепции, реализую ваши идеи. Разрабатываю рецепты, вкусно снимаю. Провожу обучение</p> 
+                                    <p class="gallery__desc gallery__desc--left gallery__desc--tablet">Во всех фотосъемках еды, я работаю как фуд-фотограф и фуд-стилист. Создаю креативные концепции, реализую ваши идеи. Разрабатываю рецепты, вкусно снимаю. Провожу обучение</p> 
                                 </div>
                                 <div class="gallery__photo">
                                         <picture>
@@ -177,7 +177,7 @@
                                             <source srcset="/img/764_about_bg-r.jpg" media="(min-width: 764px)">
                                                 <img src="/img/320_about_bg-r.jpg" alt="photo edi" class="gallery__photo--right">
                                         </picture>
-                                        <p class="gallery__desc gallery__desc--tablet">
+                                        <p class="gallery__desc gallery__desc--right gallery__desc--tablet">
                                                 <span class="gallery__desc">Mail: daria.voronina@gmail.com</span>
                                                 <span class="gallery__desc">Tel.: <span class="gallery__phone">+ 7 916 66 77 112</span></span>
                                                 <a href="#" class="btn">Работать со мной —</a>
