add 764 prices styles

--- a/src/index.html
+++ b/src/index.html
@@ -231,7 +231,6 @@
                             <li class="photo__feature">Результаты в течение 3-х дней</li>
                         </ul>
                         </div>
-                </div>
                 <div class="prices__photo">
                         <picture>
                             <source srcset="/img/1440_prices-2.jgp" media="(min-width: 1440px)">
@@ -250,7 +249,6 @@
                                     <li class="photo__feature">Результаты в течение 3-х дней</li>
                                 </ul>    
                         </div>
-                </div>
                 <div class="prices__photo">
                         <picture>
                             <source srcset="/img/1440_prices-3.jgp" media="(min-width: 1440px)">
@@ -265,13 +263,12 @@
                                 <li class="photo__feature">Food - стилизация</li>
                                 <li class="photo__feature">Использование реквизита</li>
                                 <li class="photo__feature">Цветокоррекция</li>
-                                <li class="photo__feature">Результаты в течение 5-х дней</li>
+                                <li class="photo__feature">Результаты в течение 5-и дней</li>
                             </ul>
-                        </div>
                 </div>
 
 
-                </div>
+            </div>
          
                 
                 <ul class="socials">
