add 1440px main-page styles

--- a/src/index.html
+++ b/src/index.html
@@ -41,12 +41,12 @@
         <a href="tel:79166677112" class="nav__phone nav__phone--mobile">+ 7 916 66 77 112</a>
         </header>
         <ul class="paginations">
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
+            <li class="pagination pagination--active"><a href="#" class="pagination__link pagination__link--active">01</a></li>
+            <li class="pagination"><a href="#" class="pagination__link">02</a></li>
+            <li class="pagination"><a href="#" class="pagination__link">03</a></li>
+            <li class="pagination"><a href="#" class="pagination__link">04</a></li>
+            <li class="pagination"><a href="#" class="pagination__link">05</a></li>
+            <li class="pagination"><a href="#" class="pagination__link">06</a></li>
         </ul>
         <div class="hero">
             <div class="hero__wrapper">
