add 1440 download-page styles

--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@
                         <a href="#" class="btn btn--pdf">Скачать в pdf —</a>
                 </div>
     </div>
-        <ul class="socials">
+        <ul class="socials socials--side">
                 <li class="social"><a href="#" class="social__link">INSTAGRAM</a></li>
                 <li class="social"><a href="#" class="social__link">FACEBOOK</a></li>
             </ul>
