add 1440px about styles

--- a/src/index.html
+++ b/src/index.html
@@ -155,12 +155,12 @@
     <section class="about">
         <h2 class="section__title">Обо мне</h2>
         <ul class="paginations">
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
-            <li class="pagination"><a href="#" class="pagintaion__link"></a></li>
+            <li class="pagination"><a href="#" class="pagination__link">01</a></li>
+            <li class="pagination  "><a href="#" class="pagination__link ">02</a></li>
+            <li class="pagination pagination--active"><a href="#" class="pagination__link pagination__link--active">03</a></li>
+            <li class="pagination"><a href="#" class="pagination__link">04</a></li>
+            <li class="pagination"><a href="#" class="pagination__link">05</a></li>
+            <li class="pagination"><a href="#" class="pagination__link">06</a></li>
         </ul>
         <div class="container">
                         
@@ -191,7 +191,7 @@
                             </div>
                             <div class="gallery__info">
                                     <p class="gallery__desc">Во всех фотосъемках еды, я работаю как фуд-фотограф и фуд-стилист. Создаю креативные концепции, реализую ваши идеи. Разрабатываю рецепты, вкусно снимаю. Провожу обучение</p>
-                                    <p class="gallery__desc">Mail: daria.voronina@gmail.com</p>
+                                    <p class="gallery__desc gallery__desc--email">Mail: daria.voronina@gmail.com</p>
                                     <p class="gallery__desc">Tel.: <span class="gallery__phone">+ 7 916 66 77 112</span></p>
                                     <a href="#" class="btn">Работать со мной —</a>
                             </div>
