add 1440 about pixel perfect styles

--- a/src/index.html
+++ b/src/index.html
@@ -191,6 +191,7 @@
                             </div>
                             <div class="gallery__info">
                                     <p class="gallery__desc">Во всех фотосъемках еды, я работаю как фуд-фотограф и фуд-стилист. Создаю креативные концепции, реализую ваши идеи. Разрабатываю рецепты, вкусно снимаю. Провожу обучение</p>
+                                    <p class="gallery__desc gallery__desc--desktop">Всегда открыта к сотрудничеству и рада новым предложениям</p>
                                     <p class="gallery__desc gallery__desc--email">Mail: daria.voronina@gmail.com</p>
                                     <p class="gallery__desc">Tel.: <span class="gallery__phone">+ 7 916 66 77 112</span></p>
                                     <a href="#" class="btn">Работать со мной —</a>
