add close menu btn

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,12 @@
         </a>
         <nav class="main-nav">
                 
-                    <ul class="main-nav__items">
+                    <ul class="main-nav__items main-nav__items--active">
                             <li class="main-nav__link">
-                                <a href="#2" class="main-nav__item main-nav__item--active">Обо мне</a>
+                                    <a href="#1" class="main-nav__item main-nav__item--active">Портфолио</a>
+                                </li>
+                            <li class="main-nav__link">
+                                <a href="#2" class="main-nav__item">Обо мне</a>
                             </li>
                             <li class="main-nav__link">
                                 <a href="#3" class="main-nav__item">Стоимость</a>
