--- a/src/index.html
+++ b/src/index.html
@@ -23,17 +23,17 @@
                 
                     <ul class="main-nav__items main-nav__items--active">
                             <li class="main-nav__link">
-                                    <a href="#1" class="main-nav__item main-nav__item--active">Портфолио</a>
+                                    <a href="#portfolio" class="main-nav__item main-nav__item--active">Портфолио</a>
                                 </li>
                             <li class="main-nav__link">
-                                <a href="#2" class="main-nav__item">Обо мне</a>
+                                <a href="#about" class="main-nav__item">Обо мне</a>
                             </li>
                             <li class="main-nav__link">
-                                <a href="#3" class="main-nav__item">Стоимость</a>
+                                <a href="#price" class="main-nav__item">Стоимость</a>
         
                             </li>
                             <li class="main-nav__link">
-                                <a href="#4" class="main-nav__item">Контакты</a>
+                                <a href="#contacts" class="main-nav__item">Контакты</a>
                             </li>
                     </ul>
                     <button class="hamburger">
@@ -70,7 +70,7 @@
         </ul>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
     <h2 class="section__title">ПОРТФОЛИО</h2>
     <ul class="paginations">
         <li class="pagination"><a href="#" class="pagination__link">01</a></li>
@@ -156,7 +156,7 @@
                 <li class="social"><a href="#" class="social__link">FACEBOOK</a></li>
             </ul>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <h2 class="section__title">Обо мне</h2>
         <ul class="paginations">
             <li class="pagination"><a href="#" class="pagination__link">01</a></li>
@@ -209,7 +209,7 @@
             <li class="social"><a href="#" class="social__link">FACEBOOK</a></li>
         </ul>
     </section>
-    <section class="prices">
+    <section class="prices" id="price">
         <h2 class="section__title">Стоимость</h2>
         <ul class="paginations">
             <li class="pagination"><a href="#" class="pagination__link">01</a></li>
@@ -289,7 +289,7 @@
 
     </section>
 
-<section class="contacts">
+<section class="contacts" id="contacts">
     <h2 class="section__title">Свяжитесь со мной</h2>
     <footer class="contacts__footer">
         <ul class="contacts__links">
