add 1440px pixel perfect styles

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         </a>
         <nav class="main-nav">
                 
-                    <ul class="main-nav__items main-nav__items--active">
+                    <ul class="main-nav__items">
                             <li class="main-nav__link">
                                     <a href="#portfolio" class="main-nav__item main-nav__item--active">Портфолио</a>
                                 </li>
